<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/grid1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_gravity="fill"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/grid2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_column="1"
            app:layout_row="0"
            app:layout_gravity="fill"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/grid3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_gravity="fill"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/grid4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myNameIs"
            app:layout_column="1"
            app:layout_row="1"
            app:layout_gravity="fill"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            />
        <Button
            android:id="@+id/grid5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doYouSpeakEnglish"
            app:layout_column="0"
            app:layout_row="2"
            app:layout_gravity="fill"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/grid6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goodEvening"
            app:layout_column="1"
            app:layout_row="2"
            app:layout_gravity="fill"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/grid7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iLiveIn"
            app:layout_column="0"
            app:layout_row="3"
            app:layout_gravity="fill"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/grid8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howAreYou"
            app:layout_column="1"
            app:layout_row="3"
            app:layout_gravity="fill"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>